# OmahaRich

./: .gitignore  CLAUDE.md  README.md  RESEARCH.md  RESEARCH_SUPPLEMENT.md  package-lock.json  package.json
.omc/: project-memory.json
.omc/scientist/reports/: 2026-03-25_mcp_finance_research.md  20260325_113716_stock_api_research_2025.md  korea_stock_api_survey_2025.md  us_stock_api_research_2026.md
.omc/state/: agent-replay-11788333-3554-4ac2-9656-34a62e9ea33c.jsonl  agent-replay-c7c6d111-3060-4f2d-a91a-afc0ac4a306d.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/analysis/: page.tsx
apps/web/types/: stock.ts
backend/: .env.example  pyproject.toml  requirements.txt
backend/.omc/state/: idle-notif-cooldown.json
backend/app/: config.py  database.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: analysis.py  news.py  portfolio.py  realtime.py  stocks.py
backend/app/models/: db.py  stock.py
backend/app/schemas/: analysis.py  portfolio.py  realtime.py  stock.py
backend/app/services/: realtime.py  watchlist.py
backend/app/services/ai/: analyzer.py  prompts.py
backend/app/services/analysis/: financial.py  technical.py  value.py
backend/app/services/data/: dart.py  edgar.py  market.py
backend/app/services/kis/: auth.py  client.py  domestic.py  overseas.py
backend/app/services/news/: sentiment.py
backend/tests/: test_main.py
(+10 files in other folders)
